--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>포트폴리오 소개 페이지</h1>
-    <h2><a href="./001.Info_Pj/index.html">FrontEnd</a></h2>
+    <h2><a href="./001.HTML학습/001.Info_Pj/index.html">FrontEnd</a></h2>
 
 </body>
 </html>
