--- a/002.CSS학습/003.블록플롯.html
+++ b/002.CSS학습/003.블록플롯.html
@@ -164,6 +164,28 @@
                 display:block로 쓰면 마치 div를 쓴것과
                 같아짐!
         */
+
+        /* 경우4 */
+        .case4 {
+            overflow: hidden;
+            /* 넘치는 자식요소 숨기기 설정으로
+            자식요소 float 해제하기 */
+        }
+
+        .case4 .bx {
+            float: left;
+        }
+
+        /* 경우5 */
+        .case5 .bx {
+            float: right;
+        }
+
+        .case5::after {
+            content: '';
+            display: block;
+            clear: both;
+        }
     </style>
 </head>
 
@@ -180,7 +202,9 @@
     </div>
 
     <h2>경우2</h2>
-    <h3>첫번째 float:laft, 두번째 float:right, 세번째 clear:both + float left, 네번째 float:right</h3>
+    <h3>첫번째 float:laft, 두번째 float:right, 세번째 clear:both + float left, 네번째 float:right
+        <br> clear:both를 위한 div를 마지막에 사용함
+    </h3>
     <div class="wrap">
         <div class="bx bx1 fll"></div>
         <div class="bx bx2 flr"></div>
@@ -190,7 +214,43 @@
         <!-- clear를 위한 block 박스 -->
         <div class="clb"></div>
     </div>
-    
+
+    <h2>경우3</h2>
+    <h3>첫번째 float:laft, 두번째 float:right, 세번째 clear:both + float left, 네번째 float:right
+        <br> 부모요소에 가상요소 after를 사용하여 clear:both 구현
+    </h3>
+    <div class="wrap flclb">
+        <div class="bx bx1 fll"></div>
+        <div class="bx bx2 flr"></div>
+        <div class="bx bx3 clb fll"></div>
+        <div class="bx bx4 flr"></div>
+    </div>
+
+    <h2>경우4</h2>
+    <h3>
+        모든 .bx박스에 float:left 적용하기 <br>
+        부모박스에 overflow:hidden 적용하기 <!-- 히든은 부모박스를 넘어가면 사라짐 주의 -->
+    </h3>
+    <div class="wrap case4">
+        <div class="bx bx1 "></div>
+        <div class="bx bx2 "></div>
+        <div class="bx bx3 "></div>
+        <div class="bx bx4 "></div>
+    </div>
+
+    <h2>경우5</h2>
+    <h3>
+        모든 .bx박스에 float:right 적용하기 <br>
+        부모박스에 가상요소 after로 clear:both 적용하기
+    </h3>
+    <div class="wrap case5">
+        <div class="bx bx1 "></div>
+        <div class="bx bx2 "></div>
+        <div class="bx bx3 "></div>
+        <div class="bx bx4 "></div>
+
+    </div>
+
 
 </body>
 
