--- a/001.HTML학습/003.DKB_PJ/index.html
+++ b/001.HTML학습/003.DKB_PJ/index.html
@@ -6,7 +6,7 @@
     <title>쓸쓸하고 찬란하신(神) 도깨비</title>
     <link rel="stylesheet" href="css/main.css">
 
-<body>
+<body class="scbar">
     <!-- 1. 상단영역 -->
     <header class="top">
 
@@ -29,7 +29,7 @@
                     </span>
                 </div>
                 <!-- 캐릭터 설명박스 -->
-                <div class="cd">
+                <div class="cd scbar">
                     <!-- 캐릭터 타이틀 -->
                     <h3>
                     도깨비(김신), 939세
@@ -62,7 +62,7 @@
                     </span>
                 </div>
                 <!-- 캐릭터 설명박스 -->
-                <div class="cd">
+                <div class="cd scbar">
                     <!-- 캐릭터 타이틀 -->
                     <h3>
                     지은탁, 19세
@@ -93,7 +93,7 @@
                     </span>
                 </div>
                 <!-- 캐릭터 설명박스 -->
-                <div class="cd">
+                <div class="cd scbar">
                     <!-- 캐릭터 타이틀 -->
                     <h3>
                     저승사자, 30대 후반 추정
@@ -125,7 +125,7 @@
                     </span>
                 </div>
                 <!-- 캐릭터 설명박스 -->
-                <div class="cd">
+                <div class="cd scbar">
                     <!-- 캐릭터 타이틀 -->
                     <h3>
                     써니, 20대 중후반
