--- a/002.CSS학습/003.블록플롯.html
+++ b/002.CSS학습/003.블록플롯.html
@@ -193,7 +193,7 @@
     <h1>003.블록요소의 float</h1>
 
     <h2>경우1</h2>
-    <h3>첫번째 float:laft, 두번째 float:right, 세번째 clear:both</h3>
+    <h3>첫번째 float:left, 두번째 float:right, 세번째 clear:both</h3>
     <div class="wrap">
         <div class="bx bx1 fll"></div>
         <div class="bx bx2 flr"></div>
@@ -202,7 +202,7 @@
     </div>
 
     <h2>경우2</h2>
-    <h3>첫번째 float:laft, 두번째 float:right, 세번째 clear:both + float left, 네번째 float:right
+    <h3>첫번째 float:left, 두번째 float:right, 세번째 clear:both + float left, 네번째 float:right
         <br> clear:both를 위한 div를 마지막에 사용함
     </h3>
     <div class="wrap">
@@ -216,7 +216,7 @@
     </div>
 
     <h2>경우3</h2>
-    <h3>첫번째 float:laft, 두번째 float:right, 세번째 clear:both + float left, 네번째 float:right
+    <h3>첫번째 float:left, 두번째 float:right, 세번째 clear:both + float left, 네번째 float:right
         <br> 부모요소에 가상요소 after를 사용하여 clear:both 구현
     </h3>
     <div class="wrap flclb">
