--- a/002.CSS학습/009.웹폰트1.html
+++ b/002.CSS학습/009.웹폰트1.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>웹폰트란 무엇인가?</title>
-        <style>
-            /* 
+
+<head>
+    <meta charset="utf-8">
+    <title>웹폰트란 무엇인가?</title>
+    <style>
+        /* 
             [ 웹폰트란? ]
             - 브라우저에서 사용할 수 있도록 서버에
             폰트를 올려놓고 브라우저가 이를 다운로드
@@ -54,7 +55,7 @@
 
             [ 웹폰트 생성법 ]
             1. ttf 등의 일반 글꼴을 구한다.
-            (네이버 무료폰트, 구글폰트, 유료폰트 등)
+            (구글폰트, 유료폰트 등)
 
             2. 웹폰트 변환 프로그램으로 파일을 변환한다
             - ttf(otf) -> woff 로 변환
@@ -86,45 +87,107 @@
             - 특히 윤서체 주의!
 
             [ 무료폰트 사이트 ]
-            1. 구글폰트 : fonts.google.com
-            2. 네이버 무료폰트            
+            1. 구글폰트 : https://fonts.google.com/?subset=korean
              */
 
-            /* 웹폰트 설정 */
-            
-            /* 적용하기 */
-            .wf1{
-                color: purple;
+        /* 웹폰트 설정 */
+            /* 나눔브러시 */
+            @font-face {
+                font-family: nb; /* 내가지은이름 */
+                src: url(./fonts/NanumBrushScript-Regular.woff)
+                format("woff");
             }
-            .wf2{
-                color: hotpink;
+            @font-face {
+                font-family: bw; /* 내가지은이름 */
+                src: url(./fonts/BlackAndWhitePicture-Regular.woff)
+                format("woff");
             }
-            .wf3{
-                color: rgb(15, 197, 61);
+            @font-face {
+                font-family: sm; /* 내가지은이름 */
+                src: url(./fonts/SongMyung-Regular.woff)
+                format("woff");
             }
-            .wf4{
-                color: rgb(184, 3, 144);
+            /* pressStart2P체 */
+            @font-face {
+                font-family: 'ps';
+                src: url('./fonts/PressStart2P-Regular.woff2')
+                 format("woff2");
             }
-            .wf5{
-                color: rgb(0, 197, 231);
+            /* RoadRage체 */
+            @font-face {
+                font-family: 'rr';
+                src: url(./fonts/RoadRage-Regular.woff2)
+                 format('woff2');
             }
-            .wf6{
-                color: rgb(247, 99, 0);
+            /* Estonia체 */
+            @font-face {
+                font-family: 'er';
+                src: url(./fonts/Estonia-Regular.woff2)
+                 format('woff2');
+            }
+            /* IndiaFlower체 */
+            @font-face {
+                font-family: 'if';
+                src: url(./fonts/IndieFlower.woff2)
+                 format('woff2');
             }
 
+        /* 적용하기 */
+        .wf1 {
+            font-family: bw;
+            color: purple;
+        }
 
-        </style>
-    </head>
-    <body>
+        .wf2 {
+            font-family: nb;
+            color: hotpink;
+            font-size: 40px;
+        }
 
-        <h1 class="wf1">저 멀리 있는 별을 바라보는 일은 신성한 음악이나 고귀한 그림 또는 위대한 시인의 글귀와 같이 우리의 생각을 자극하고 정화하는 힘을 갖고 있어. 언제나 효과가 좋지.</h1>
-        <h1 class="wf2">저 멀리 있는 별을 바라보는 일은 신성한 음악이나 고귀한 그림 또는 위대한 시인의 글귀와 같이 우리의 생각을 자극하고 정화하는 힘을 갖고 있어. 언제나 효과가 좋지.</h1>
-        <h1 class="wf3">저 멀리 있는 별을 바라보는 일은 신성한 음악이나 고귀한 그림 또는 위대한 시인의 글귀와 같이 우리의 생각을 자극하고 정화하는 힘을 갖고 있어. 언제나 효과가 좋지.</h1>
-        <h1 class="wf4">A peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music, or a noble picture, or a passage from the grander poets. It always does one good.</h1>
-        <h1 class="wf5">A peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music, or a noble picture, or a passage from the grander poets. It always does one good.</h1>
-        <h1 class="wf6">A peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music, or a noble picture, or a passage from the grander poets. It always does one good.</h1>
+        .wf3 {
+            font-family: sm;
+            color: rgb(15, 197, 61);
+        }
+
+        .wf4 {
+            font-family: ps;
+            color: rgb(184, 181, 3);
+        }
+
+        .wf5 {
+            font-family: rr;
+            color: rgb(0, 197, 231);
+            font-size: 50px;
+        }
+
+        .wf6 {
+            font-family: er;
+            color: rgb(247, 99, 0);
+            font-size: 50px;
+        }
+        .wf7 {
+            font-family: if;
+            color: rgb(0, 4, 255);
+        }
+    </style>
+</head>
+
+<body>
+
+    <h1 class="wf1">저 멀리 있는 별을 바라보는 일은 신성한 음악이나 고귀한 그림 또는 위대한 시인의 글귀와 같이 우리의 생각을 자극하고 정화하는 힘을 갖고 있어. 언제나 효과가 좋지.</h1>
+    <h1 class="wf2">저 멀리 있는 별을 바라보는 일은 신성한 음악이나 고귀한 그림 또는 위대한 시인의 글귀와 같이 우리의 생각을 자극하고 정화하는 힘을 갖고 있어. 언제나 효과가 좋지.</h1>
+    <h1 class="wf3">저 멀리 있는 별을 바라보는 일은 신성한 음악이나 고귀한 그림 또는 위대한 시인의 글귀와 같이 우리의 생각을 자극하고 정화하는 힘을 갖고 있어. 언제나 효과가 좋지.</h1>
+    <h1 class="wf4">A peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music,
+        or a noble picture, or a passage from the grander poets. It always does one good.</h1>
+    <h1 class="wf5">A peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music,
+        or a noble picture, or a passage from the grander poets. It always does one good.</h1>
+    <h1 class="wf6">A peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music,
+        or a noble picture, or a passage from the grander poets. It always does one good.</h1>
+    <h1 class="wf7">A peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music,
+        or a noble picture, or a passage from the grander poets. It always does one good.</h1>
 
 
-        
-    </body>
+
+</body>
+
 </html>
