--- a/001.HTML/000.T_Pj/index.html
+++ b/001.HTML/000.T_Pj/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>고요한 숲속의 요가원</title>
+    <title>연습페이지</title>
     <link rel="stylesheet" href="/1/001.HTML/000.T_Pj/css/main.css">
     
-    <body>
+    <body class="m1">
         <header class="top">
-            
+            <h1>음악을 꿈꾸다<br>Sogno 쏘뇨</h1>
         </header>
 
         <div class="box1">
