--- a/001.HTML/000.T_Pj/index.html
+++ b/001.HTML/000.T_Pj/index.html
@@ -8,7 +8,11 @@
     
     <body class="m1">
         <header class="top">
-            <h1>음악을 꿈꾸다<br>Sogno 쏘뇨</h1>
+
+            <nav class="mbar"></nav>
+            <h1>
+                <img src="./img/logo.png" alt="로고이미지">
+            </h1>
         </header>
 
         <div class="box1">
