--- a/001.HTML/000.T_Pj/index.html
+++ b/001.HTML/000.T_Pj/index.html
@@ -11,7 +11,7 @@
 
             <nav class="mbar"></nav>
             <h1>
-                <img src="./img/logo.png" alt="로고이미지">
+                <a href="#"><img src="./img/logo.png" alt="로고이미지"></a>
             </h1>
         </header>
 
