--- a/001.HTML/000.T_Pj/Dune_Pj/index.html
+++ b/001.HTML/000.T_Pj/Dune_Pj/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="HP.css">
+    <link rel="stylesheet" href="Dune.css">
     <title>Dune</title>
 </head>
 <body class="scb">
