--- a/001.HTML/000.T_Pj/Dune_Pj/index.html
+++ b/001.HTML/000.T_Pj/Dune_Pj/index.html
@@ -8,7 +8,7 @@
 <body class="scb">
     <header class="top">
         <h1 class="logo">
-            <a href="#"><img src="../imgDune/logo.png" alt="듄로고"></a>
+            <a href="#"><img src="../imgDune/Untitled-1.png" alt="듄로고"></a>
         </h1>
         
         <!-- GNB메뉴 -->
