--- a/001.HTML/000.T_Pj/Dune_Pj/index.html
+++ b/001.HTML/000.T_Pj/Dune_Pj/index.html
@@ -14,11 +14,11 @@
         <!-- GNB메뉴 -->
         <nav class="gnb">
             <ul>
-                <li><a href="#">듄의 역사</a></li>
+                <li><a href="#">시놉시스</a></li>
                 <li><a href="#">인물관계도</a></li>
                 <li><a href="#">가문정보</a></li>
-                <li><a href="#">갤러리</a></li>
-                <li><a href="#">예고편</a></li>
+                <li><a href="#">영상</a></li>
+                <li><a href="#">이미지</a></li>
             </ul>
         </nav>
         
