--- a/001.HTML/003.DKB_PJ/index.html
+++ b/001.HTML/003.DKB_PJ/index.html
@@ -3,9 +3,12 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 모바일 뷰포트 필수 -->
     <title>쓸쓸하고 찬란하신(神) 도깨비</title>
     <link rel="stylesheet" href="css/main.css">
-
+    <link rel="stylesheet" href="css/media.css">
+</head>
 <body class="scbar">
     <!-- 1. 상단영역 -->
     <header class="top">
@@ -67,6 +70,9 @@
                 <li><a href="#">[심리 테스트]</a></li>
             </ul>
         </nav>
+
+        <!-- 모바일용 햄버거 버튼 -->
+        <button class="ham">≡</button>
 
     </header>
     <!-- 2.컨텐츠영역 -->
