--- a/001.HTML/005.Robot.Pj/robot.html
+++ b/001.HTML/005.Robot.Pj/robot.html
@@ -154,7 +154,18 @@
             margin: 0 auto;
             margin-top: 100px;
             background: url(./images/metal01.jpg) no-repeat center/cover;
+
+            /* 애니메이션:이시이지반방마 */
+            animation: robotAni 1.5s ease-out 2s forwards;
         }
+
+        /* 로봇머리,몸통 키프레임 */
+        @keyframes robotAni {
+            to{
+                left: 0;
+            }
+        }/* 키프레임 */
+
 
         /* 눈1 */
         #eye1 {
@@ -227,6 +238,10 @@
             margin: 0 auto;
             margin-top: 50px;
             background: url(./images/metal01.jpg) no-repeat center/cover;
+
+            /* 애니메이션:이시이지반방마 */
+            animation: robotAni 1.5s ease-out 2s forwards;
+
         }
 
         #neck {
