--- a/001.HTML/000.T_Pj/Dune_Pj/index.html
+++ b/001.HTML/000.T_Pj/Dune_Pj/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Dune.css">
     <title>Dune</title>
 </head>
+
 <body class="scb">
     <header class="top">
         <h1 class="logo">
             <a href="#"><img src="../imgDune/logo1.png" alt="듄로고"></a>
         </h1>
-        
+
         <!-- GNB메뉴 -->
         <nav class="gnb">
             <ul>
                 <li><a href="#">시놉시스</a></li>
                 <li><a href="#">인물관계도</a></li>
                 <li><a href="#">가문정보</a></li>
+                <ol class="smenu">
+                    <li><a href="#">아트레이데스 가문</a></li>
+                    <li><a href="#"></a>프레멘 중 페다이킨</li>
+                    <li><a href="#">하코넨 가문</a></li>
+                    <li><a href="#"></a>베네 게세리트</li>
+                    <li><a href="#"></a>코리노 가문</li>
+                </ol>
                 <li><a href="#">영상</a></li>
                 <li><a href="#">이미지</a></li>
             </ul>
         </nav>
-        
+
     </header>
 </body>
+
 </html>
