--- a/001.HTML/000.T_Pj/Dune_Pj/index.html
+++ b/001.HTML/000.T_Pj/Dune_Pj/index.html
@@ -10,28 +10,140 @@
 <body class="scb">
     <header class="top">
         <h1 class="logo">
-            <a href="#"><img src="../imgDune/logo1.png" alt="듄로고"></a>
+            <a href="#"><img src="./imgDune/logo1.png" alt="듄로고"></a>
         </h1>
 
-        <!-- GNB메뉴 -->
+        <!-- 상단 -->
         <nav class="gnb">
             <ul>
                 <li><a href="#">시놉시스</a></li>
+                <li><a href="#">가문정보</a>
+                    <ol class="smenu">
+                        <li><a href="#">아트레이데스</a></li>
+                        <li><a href="#">프레멘 페다이킨</a></li>
+                        <li><a href="#">하코넨</a></li>
+                        <li><a href="#">베네 게세리트</a></li>
+                        <li><a href="#">코리노</a></li>
+                    </ol>
+                </li>
                 <li><a href="#">인물관계도</a></li>
-                <li><a href="#">가문정보</a></li>
-                <ol class="smenu">
-                    <li><a href="#">아트레이데스 가문</a></li>
-                    <li><a href="#"></a>프레멘 중 페다이킨</li>
-                    <li><a href="#">하코넨 가문</a></li>
-                    <li><a href="#"></a>베네 게세리트</li>
-                    <li><a href="#"></a>코리노 가문</li>
-                </ol>
-                <li><a href="#">영상</a></li>
+                <li><a href="#">등장행성</a>
+                    <ol class="smenu">
+                        <li><a href="#">칼라단</a></li>
+                        <li><a href="#">아라키스</a></li>
+                        <li><a href="#">기에디 프라임</a></li>
+                        <li><a href="#">살루사 세쿤더스</a></li>
+                    </ol>
+                </li>
                 <li><a href="#">이미지</a></li>
+                <li><a href="#">영상</a></li>
             </ul>
         </nav>
-
+        <button class="ham">≡</button>
     </header>
+    <!-- 중간 -->
+<main class="cont">
+    <div id="cbx">
+        <div class="cat">
+            <div class="ci">
+                <img src="./imgDune/character1.jpg" alt="캐릭1">
+                <img src="./imgDune/DUNE_POSTER_1.jpg" alt="캐릭1">
+                <span>
+                    <img src="./imgDune/name1.png" alt="이름로고1흐림">
+                    <!-- <img src="./imgDune/name1.png" alt="이름로고1진함"> -->
+                </span>
+            </div>
+        </div>
+        <div class="cat">
+            <div class="ci">
+                <img src="./imgDune/character2.jpg" alt="캐릭2">
+                <img src="./imgDune/DUNE_POSTER_2.jpg" alt="캐릭2">
+                <span>
+                    <img src="./imgDune/name1.png" alt="이름로고2흐림">
+                    <img src="./imgDune/name1.png" alt="이름로고2진함">
+                </span>
+            </div>
+        </div>
+        <div class="cat">
+            <div class="ci">
+                <img src="./imgDune/character3.jpg" alt="캐릭3">
+                <img src="./imgDune/DUNE_POSTER_3.jpg" alt="캐릭3">
+                <span>
+                    <img src="./imgDune/name1.png" alt="이름로고3흐림">
+                    <img src="./imgDune/name1.png" alt="이름로고3진함">
+                </span>
+            </div>
+        </div>
+        <div class="cat">
+            <div class="ci">
+                <img src="./imgDune/character4.jpg" alt="캐릭4">
+                <img src="./imgDune/DUNE_POSTER_4.jpg" alt="캐릭4">
+                <span>
+                    <img src="./imgDune/name1.png" alt="이름로고4흐림">
+                    <img src="./imgDune/name1.png" alt="이름로고4진함">
+                </span>
+            </div>
+        </div>
+        <div class="cat">
+            <div class="ci">
+                <img src="./imgDune/character5.jpg" alt="캐릭5">
+                <img src="./imgDune/DUNE_POSTER_5.jpg" alt="캐릭5">
+                <span>
+                    <img src="./imgDune/name2.png" alt="이름로고5흐림">
+                    <img src="./imgDune/name2.png" alt="이름로고5진함">
+                </span>
+            </div>
+        </div>
+        <div class="cat">
+            <div class="ci">
+                <img src="./imgDune/character6.jpg" alt="캐릭6">
+                <img src="./imgDune/DUNE_POSTER_6.jpg" alt="캐릭6">
+                <span>
+                    <img src="./imgDune/name2.png" alt="이름로고6흐림">
+                    <img src="./imgDune/name2.png" alt="이름로고6진함">
+                </span>
+            </div>
+        </div>
+        <div class="cat">
+            <div class="ci">
+                <img src="./imgDune/character7.jpg" alt="캐릭7">
+                <img src="./imgDune/DUNE_POSTER_7.jpg" alt="캐릭7">
+                <span>
+                    <img src="./imgDune/name3.png" alt="이름로고7흐림">
+                    <img src="./imgDune/name3.png" alt="이름로고7진함">
+                </span>
+            </div>
+        </div>
+        <div class="cat">
+            <div class="ci">
+                <img src="./imgDune/character8.jpg" alt="캐릭8">
+                <img src="./imgDune/DUNE_POSTER_8.jpg" alt="캐릭8">
+                <span>
+                    <img src="./imgDune/name3.png" alt="이름로고8흐림">
+                    <img src="./imgDune/name3.png" alt="이름로고8진함">
+                </span>
+            </div>
+        </div>
+        
+    </div>
+</main>
+
+
+    <!-- 하단 -->
+    <footer>
+        <div class="footer-center" style="background-color: #000;">
+            <ul class="footer-link">
+                <li><a href="#" style="font-size: 13px; color: #639691;">개인정보보호방침</a></li>
+                <li><a href="#" style="font-size: 13px; color: #639691;">이용약관</a></li>
+                <li id="credit" style="font-size: 13px; color: #639691;">크레딧</li>
+            </ul>
+            <div class="copyright">
+                <p style="font-size: 9px; color: sandybrown;">
+                    © 2021 LEGENDARY AND WARNER BROS. ENTERTAINMENT INC. ALL RIGHTS RESERVED.</p>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
