--- a/001.HTML/006.CGV_PJ/003.site/index.html
+++ b/001.HTML/006.CGV_PJ/003.site/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CGV PJ</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-    
+    <!-- 1. 상단영역 -->
+    <header id="top" class="part">
+        <!-- 1-1.페이지 타이틀 -->
+        <h1 class="tit">CGV 예고편 상영관</h1>
+    </header>
+    <!-- 2. 메인영역 -->
+    <main id="cont" class="part">
+        <!-- 2-1.스크린박스 -->
+        <div id="screen">
+            <iframe src="https://www.youtube.com/embed/rHTTv3m-zb0?autoplay=1&mute=1&loop=1&playlist=rHTTv3m-zb0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+    </main>
+    <!-- 3. 하단영역 -->
+    <footer id="info" class="part">
+
+    </footer>
+
 </body>
+
 </html>
