--- a/001.HTML/006.CGV_PJ/003.site/index.html
+++ b/001.HTML/006.CGV_PJ/003.site/index.html
@@ -18,10 +18,34 @@
     <main id="cont" class="part">
         <!-- 2-1.스크린박스 -->
         <div id="screen">
-            <iframe src="https://www.youtube.com/embed/rHTTv3m-zb0?autoplay=1&mute=1&loop=1&playlist=rHTTv3m-zb0"
+            <iframe
+                src="https://www.youtube.com/embed/rHTTv3m-zb0?autoplay=1&mute=1&loop=1&playlist=rHTTv3m-zb0&playsinline=1"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
+        <!-- 2-2.예고편선택메뉴 -->
+        <nav class="mlist">
+            <ul>
+                <li>
+                    <a href="#">
+                    <img src="images/m1.jpg" alt="비와 당신의 이야기"></a></li>
+                <li>
+                    <a href="#">
+                    <img src="images/m2.jpg" alt="서복"></a></li>
+                <li>
+                    <a href="#">
+                    <img src="images/m3.jpg" alt="미나리"></a></li>
+                <li>
+                    <a href="#">
+                    <img src="images/m4.jpg" alt="더 스파이"></a></li>
+                <li>
+                    <a href="#">
+                    <img src="images/m5.jpg" alt="노매드랜드"></a></li>
+                <li>
+                    <a href="#">
+                    <img src="images/m6.jpg" alt="샹치"></a></li>
+            </ul>
+        </nav>
     </main>
     <!-- 3. 하단영역 -->
     <footer id="info" class="part">
