--- a/001.HTML/000.T_Pj/Dune_Pj/index.html
+++ b/001.HTML/000.T_Pj/Dune_Pj/index.html
@@ -51,7 +51,7 @@
                 <img src="./imgDune/DUNE_POSTER_1.jpg" alt="캐릭1">
                 <span>
                     <img src="./imgDune/name1.png" alt="이름로고1흐림">
-                    <!-- <img src="./imgDune/name1.png" alt="이름로고1진함"> -->
+                    <img src="./imgDune/name1.png" alt="이름로고1진함">
                 </span>
             </div>
         </div>
