--- a/001.HTML/000.T_Pj/Dune_Pj/index.html
+++ b/001.HTML/000.T_Pj/Dune_Pj/index.html
@@ -52,6 +52,14 @@
                 <span>
                     <img src="./imgDune/name1.png" alt="이름로고1흐림">
                     <img src="./imgDune/name1.png" alt="이름로고1진함">
+                    <ol class="txt">
+                        <li>폴 아트레이스</li>
+                        <p>
+                            <li>BEYOND FEAR, HIS DESTINY AWAITS.</li>
+                        </p>
+                        <li>본래 딸로 태어나야 했으나 후계자를 원한 아버지에 대한 어머니의 사랑으로 아들로 태어남. 퀴사츠 해더락으로 각성한다.</li>
+                    </ol>
+
                 </span>
             </div>
         </div>
