--- a/001.HTML/006.CGV_PJ/003.site/index.html
+++ b/001.HTML/006.CGV_PJ/003.site/index.html
@@ -57,7 +57,7 @@
                             <li>
                                 <a href="#">무비파인더</a>
                             </li>
-                            <li>
+                            <li class="bdt">
                                 <a href="#">CGV아트하우스</a>
                             </li>
                         </ol>
@@ -70,7 +70,10 @@
                         <ol>
                             <li>
                                 <a href="#">빠른예매</a>
+                            </li>
+                            <li>
                                 <a href="#">상영시간표</a>
+
                             </li>
                         </ol>
                     </div>
@@ -82,11 +85,18 @@
                         <ol>
                             <li>
                                 <a href="#">CGV 극장</a>
+                            </li>
+                            <li>
                                 <a href="#">특별관</a>
+
+                            </li>
+
+                            <li class="bdt">
                                 <a href="#">CLUB 서비스</a>
                             </li>
-                        </ol>
-                    </div>
+                </li>
+                </ol>
+                </div>
                 </li>
                 <li>
                     <a href="#">이벤트&amp;컬처</a>
@@ -95,11 +105,18 @@
                         <ol>
                             <li>
                                 <a href="#">이벤트</a>
-                                <a href="#">기프트샵</a>
-                                <a href="#">매거진</a>
                             </li>
-                        </ol>
-                    </div>
+                            <li>
+
+                                <a href="#">기프트샵</a>
+                            </li>
+                            <li>
+                                <a href="#">매거진</a>
+
+                            </li>
+                </li>
+                </ol>
+                </div>
                 </li>
             </ul>
         </nav>
