--- a/001.HTML/006.CGV_PJ/003.site/index.html
+++ b/001.HTML/006.CGV_PJ/003.site/index.html
@@ -94,11 +94,11 @@
                             <li class="bdt">
                                 <a href="#">CLUB 서비스</a>
                             </li>
-                </li>
-                </ol>
+                        </li>
+                    </ol>
                 </div>
-                </li>
-                <li>
+                    </li>
+                        <li>
                     <a href="#">이벤트&amp;컬처</a>
                     <!-- 서브메뉴 -->
                     <div class="smenu">
@@ -114,12 +114,18 @@
                                 <a href="#">매거진</a>
 
                             </li>
-                </li>
-                </ol>
+                        </li>
+                    </ol>
                 </div>
-                </li>
-            </ul>
-        </nav>
+            </li>
+        </ul> <!-- ul.glist -->
+        </nav><!-- 영사기박스 -->
+        <aside id="cam">
+            <!-- 영사기 이미지 -->
+            <img src="./images/gnb.png" alt="영사기">
+            <!-- 빔표시박스 -->
+            <div class="bim"></div>
+        </aside>
     </header>
     <!-- 2. 메인영역 -->
     <main id="cont" class="part rbx">
