--- a/001.HTML/006.CGV_PJ/003.site/index.html
+++ b/001.HTML/006.CGV_PJ/003.site/index.html
@@ -119,13 +119,14 @@
                 </div>
             </li>
         </ul> <!-- ul.glist -->
-        </nav><!-- 영사기박스 -->
+        <!-- 영사기박스 -->
         <aside id="cam">
             <!-- 영사기 이미지 -->
             <img src="./images/gnb.png" alt="영사기">
             <!-- 빔표시박스 -->
             <div class="bim"></div>
         </aside>
+    </nav>
     </header>
     <!-- 2. 메인영역 -->
     <main id="cont" class="part rbx">
