--- a/001.HTML/006.CGV_PJ/003.site/index.html
+++ b/001.HTML/006.CGV_PJ/003.site/index.html
@@ -94,11 +94,11 @@
                             <li class="bdt">
                                 <a href="#">CLUB 서비스</a>
                             </li>
-                        </li>
-                    </ol>
+                </li>
+                </ol>
                 </div>
-                    </li>
-                        <li>
+                </li>
+                <li>
                     <a href="#">이벤트&amp;컬처</a>
                     <!-- 서브메뉴 -->
                     <div class="smenu">
@@ -114,19 +114,19 @@
                                 <a href="#">매거진</a>
 
                             </li>
-                        </li>
-                    </ol>
+                </li>
+                </ol>
                 </div>
-            </li>
-        </ul> <!-- ul.glist -->
-        <!-- 영사기박스 -->
-        <aside id="cam">
-            <!-- 영사기 이미지 -->
-            <img src="./images/gnb.png" alt="영사기">
-            <!-- 빔표시박스 -->
-            <div class="bim"></div>
-        </aside>
-    </nav>
+                </li>
+            </ul> <!-- ul.glist -->
+            <!-- 영사기박스 -->
+            <aside id="cam">
+                <!-- 영사기 이미지 -->
+                <img src="./images/gnb.png" alt="영사기">
+                <!-- 빔표시박스 -->
+                <div class="bim"></div>
+            </aside>
+        </nav>
     </header>
     <!-- 2. 메인영역 -->
     <main id="cont" class="part rbx">
@@ -208,7 +208,31 @@
     </main>
     <!-- 3. 하단영역 -->
     <footer id="info" class="part">
-
+        <!-- 3-1. 회사정보 -->
+        <address>
+            <img src="./images/blogo.png" alt="하단로고">
+            (04377)서울특별시 용산구 한강대로 23길 55, 아이파크몰 6층(한강로동) <br>
+            대표이사 : 최병환사업자등록번호 : 104-81-45690통신판매업신고번호 : 2017-서울용산-0662 <br>
+            개인정보보호 책임자 : 정종민대표이메일 : cjcgvmaster@cj.netCGV고객센터 : 1544-1122
+        </address>
+        <!-- 3-2. SNS버튼 -->
+        <ul class="sns">
+            <li>
+                <a href="https://www.facebook.com/CJCGV" target="_blank" title="페이스북 바로가기">
+                    <span class="ir">페이스북 바로가기</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/cj_cgv" target="_blank" title="트위터 바로가기">
+                    <span class="ir">트위터 바로가기</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/cgv_korea/" target="_blank" title="인스타그램 바로가기">
+                    <span class="ir">인스타그램 바로가기</span>
+                </a>
+            </li>
+        </ul>
     </footer>
 
 </body>
