--- a/001.HTML/006.CGV_PJ/003.site/index.html
+++ b/001.HTML/006.CGV_PJ/003.site/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CGV PJ</title>
     <link rel="stylesheet" href="css/main.css">
+    <!-- 기존 css하단에 외부파일 미디어쿼리 넣기 -->
+    <link rel="stylesheet" href="css/media.css">
 
     <!-- script 요소 스크립트 코딩영역 -->
     <script>
@@ -73,28 +75,25 @@
                             </li>
                             <li>
                                 <a href="#">상영시간표</a>
-
                             </li>
                         </ol>
                     </div>
                 </li>
                 <li>
                     <a href="#">극장</a>
-                    <!-- 서브메뉴 -->
-                    <div class="smenu">
-                        <ol>
+                        <!-- 서브메뉴 -->
+                        <div class="smenu">
+                            <ol>
+                                <li>
+                                    <a href="#">CGV 극장</a>
+                                </li>
                             <li>
-                                <a href="#">CGV 극장</a>
+                        <a href="#">특별관</a>
+                    </li>
+                        <li class="bdt">
+                            <a href="#">CLUB 서비스</a>
+                                </li>
                             </li>
-                            <li>
-                                <a href="#">특별관</a>
-
-                            </li>
-
-                            <li class="bdt">
-                                <a href="#">CLUB 서비스</a>
-                            </li>
-                </li>
                 </ol>
                 </div>
                 </li>
@@ -205,6 +204,7 @@
                     </a></li>
             </ul>
         </nav>
+
     </main>
     <!-- 3. 하단영역 -->
     <footer id="info" class="part">
