--- a/001.HTML/000.T_Pj/Dune_Pj/index.html
+++ b/001.HTML/000.T_Pj/Dune_Pj/index.html
@@ -43,97 +43,140 @@
         <button class="ham">≡</button>
     </header>
     <!-- 중간 -->
-<main class="cont">
-    <div id="cbx">
-        <div class="cat">
-            <div class="ci">
-                <img src="./imgDune/character1.jpg" alt="캐릭1">
-                <img src="./imgDune/DUNE_POSTER_1.jpg" alt="캐릭1">
-                <ol class="txt">
-                    <li>폴 아트레이스</li><br>
+    <main class="cont">
+        <div id="cbx">
+            <div class="cat">
+                <div class="ci">
+                    <ol class="txt">
+                        <br>
+                        <li>폴 아트레이스</li><br>
                         <li>BEYOND FEAR, HIS DESTINY AWAITS.</li><br>
-                    <li>본래 딸로 태어나야 했으나 후계자를 원한 아버지에 대한 어머니의 사랑으로 아들로 태어남. 퀴사츠 해더락으로 각성한다.</li>
-                </ol>
-                <span>
-                    <img src="./imgDune/name1.png" alt="이름로고1흐림">
-                    <img src="./imgDune/name1.png" alt="이름로고1진함">
+                        <li>본래 딸로 태어나야 했으나 후계자를 원한 아버지에 대한 어머니의 사랑으로 아들로 태어남. 퀴사츠 해더락으로 각성한다.</li>
+                    </ol>
+                    <img src="./imgDune/character1.jpg" alt="캐릭1">
+                    <img src="./imgDune/DUNE_POSTER_1.jpg" alt="캐릭1">
+                    <span>
+                        <img src="./imgDune/name1.png" alt="이름로고1흐림">
+                        <img src="./imgDune/name1.png" alt="이름로고1진함">
 
-                </span>
+                    </span>
+                </div>
             </div>
-        </div>
-        <div class="cat">
-            <div class="ci">
-                <img src="./imgDune/character2.jpg" alt="캐릭2">
-                <img src="./imgDune/DUNE_POSTER_2.jpg" alt="캐릭2">
-                <span>
-                    <img src="./imgDune/name1.png" alt="이름로고2흐림">
-                    <img src="./imgDune/name1.png" alt="이름로고2진함">
-                </span>
+            <div class="cat">
+                <div class="ci">
+                    <ol class="txt">
+                        <br>
+                        <li>레토 공작</li><br>
+                        <li>LEADER TO MANY,FATHER TO ONE.</li><br>
+                        <li>완벽한 인격을 갖춘 아트레이데스 가문의 수장</li>
+                    </ol>
+                    <img src="./imgDune/character2.jpg" alt="캐릭2">
+                    <img src="./imgDune/DUNE_POSTER_2.jpg" alt="캐릭2">
+                    <span>
+                        <img src="./imgDune/name1.png" alt="이름로고2흐림">
+                        <img src="./imgDune/name1.png" alt="이름로고2진함">
+                    </span>
+                </div>
             </div>
-        </div>
-        <div class="cat">
-            <div class="ci">
-                <img src="./imgDune/character3.jpg" alt="캐릭3">
-                <img src="./imgDune/DUNE_POSTER_3.jpg" alt="캐릭3">
-                <span>
-                    <img src="./imgDune/name1.png" alt="이름로고3흐림">
-                    <img src="./imgDune/name1.png" alt="이름로고3진함">
-                </span>
+            <div class="cat">
+                <div class="ci">
+                    <ol class="txt">
+                        <br>
+                        <li>레이디 제시카</li><br>
+                        <li>A MOTHER’S HOPE.</li><br>
+                        <li>공작의 첩이자 폴의 어머니. 베네 게세리트 일원.</li>
+                    </ol>
+                    <img src="./imgDune/character3.jpg" alt="캐릭3">
+                    <img src="./imgDune/DUNE_POSTER_3.jpg" alt="캐릭3">
+                    <span>
+                        <img src="./imgDune/name1.png" alt="이름로고3흐림">
+                        <img src="./imgDune/name1.png" alt="이름로고3진함">
+                    </span>
+                </div>
             </div>
-        </div>
-        <div class="cat">
-            <div class="ci">
-                <img src="./imgDune/character4.jpg" alt="캐릭4">
-                <img src="./imgDune/DUNE_POSTER_4.jpg" alt="캐릭4">
-                <span>
-                    <img src="./imgDune/name1.png" alt="이름로고4흐림">
-                    <img src="./imgDune/name1.png" alt="이름로고4진함">
-                </span>
+            <div class="cat">
+                <div class="ci">
+                    <ol class="txt">
+                        <br>
+                        <li>던컨 아이다호</li><br>
+                        <li>THE KILLER EXTRAORDINARY.</li><br>
+                        <li>레토 공작의 심복인 경비대장. 폴과 각별하다</li>
+                    </ol>
+                    <img src="./imgDune/character4.jpg" alt="캐릭4">
+                    <img src="./imgDune/DUNE_POSTER_4.jpg" alt="캐릭4">
+                    <span>
+                        <img src="./imgDune/name1.png" alt="이름로고4흐림">
+                        <img src="./imgDune/name1.png" alt="이름로고4진함">
+                    </span>
+                </div>
             </div>
-        </div>
-        <div class="cat">
-            <div class="ci">
-                <img src="./imgDune/character5.jpg" alt="캐릭5">
-                <img src="./imgDune/DUNE_POSTER_5.jpg" alt="캐릭5">
-                <span>
-                    <img src="./imgDune/name2.png" alt="이름로고5흐림">
-                    <img src="./imgDune/name2.png" alt="이름로고5진함">
-                </span>
+            <div class="cat">
+                <div class="ci">
+                    <ol class="txt">
+                        <br>
+                        <li>하코넨 남작</li><br>
+                        <li>ALL-CONSUMING EVIL.</li><br>
+                        <li>남작가. 아트레이데스와 라이벌. 80년간 아라키스에서 스파이스 생산을 독점했다</li>
+                    </ol>
+                    <img src="./imgDune/character5.jpg" alt="캐릭5">
+                    <img src="./imgDune/DUNE_POSTER_5.jpg" alt="캐릭5">
+                    <span>
+                        <img src="./imgDune/name2.png" alt="이름로고5흐림">
+                        <img src="./imgDune/name2.png" alt="이름로고5진함">
+                    </span>
+                </div>
             </div>
-        </div>
-        <div class="cat">
-            <div class="ci">
-                <img src="./imgDune/character6.jpg" alt="캐릭6">
-                <img src="./imgDune/DUNE_POSTER_6.jpg" alt="캐릭6">
-                <span>
-                    <img src="./imgDune/name2.png" alt="이름로고6흐림">
-                    <img src="./imgDune/name2.png" alt="이름로고6진함">
-                </span>
+            <div class="cat">
+                <div class="ci">
+                    <ol class="txt">
+                        <br>
+                        <li>글로수 라반</li><br>
+                        <li>THE BEAST.</li><br>
+                        <li>THE BEAST.</li>
+                    </ol>
+                    <img src="./imgDune/character6.jpg" alt="캐릭6">
+                    <img src="./imgDune/DUNE_POSTER_6.jpg" alt="캐릭6">
+                    <span>
+                        <img src="./imgDune/name2.png" alt="이름로고6흐림">
+                        <img src="./imgDune/name2.png" alt="이름로고6진함">
+                    </span>
+                </div>
             </div>
-        </div>
-        <div class="cat">
-            <div class="ci">
-                <img src="./imgDune/character7.jpg" alt="캐릭7">
-                <img src="./imgDune/DUNE_POSTER_7.jpg" alt="캐릭7">
-                <span>
-                    <img src="./imgDune/name3.png" alt="이름로고7흐림">
-                    <img src="./imgDune/name3.png" alt="이름로고7진함">
-                </span>
+            <div class="cat">
+                <div class="ci">
+                    <ol class="txt">
+                        <br>
+                        <li>챠니</li><br>
+                        <li>BORN TO DEFY.</li><br>
+                        <li>폴의 꿈에 계속해서 나타나는 미지의 소녀. 훗날 폴의 운명을 좌우한다</li>
+                    </ol>
+                    <img src="./imgDune/character7.jpg" alt="캐릭7">
+                    <img src="./imgDune/DUNE_POSTER_7.jpg" alt="캐릭7">
+                    <span>
+                        <img src="./imgDune/name3.png" alt="이름로고7흐림">
+                        <img src="./imgDune/name3.png" alt="이름로고7진함">
+                    </span>
+                </div>
             </div>
-        </div>
-        <div class="cat">
-            <div class="ci">
-                <img src="./imgDune/character8.jpg" alt="캐릭8">
-                <img src="./imgDune/DUNE_POSTER_8.jpg" alt="캐릭8">
-                <span>
-                    <img src="./imgDune/name3.png" alt="이름로고8흐림">
-                    <img src="./imgDune/name3.png" alt="이름로고8진함">
-                </span>
+            <div class="cat">
+                <div class="ci">
+                    <ol class="txt">
+                        <br>
+                        <li>스틸가</li><br>
+                        <li>MASTER OF THE DESERT.</li><br>
+                        <li>프레멘 마을의 촌장이자 챠니의 삼촌. 폴의 동지이자 전우가 된다</li>
+                    </ol>
+                    <img src="./imgDune/character8.jpg" alt="캐릭8">
+                    <img src="./imgDune/DUNE_POSTER_8.jpg" alt="캐릭8">
+                    <span>
+                        <img src="./imgDune/name3.png" alt="이름로고8흐림">
+                        <img src="./imgDune/name3.png" alt="이름로고8진함">
+                    </span>
+                </div>
             </div>
+
         </div>
-        
-    </div>
-</main>
+    </main>
 
 
     <!-- 하단 -->
