--- a/001.HTML/000.T_Pj/Dune_Pj/index.html
+++ b/001.HTML/000.T_Pj/Dune_Pj/index.html
@@ -132,7 +132,7 @@
                         <br>
                         <li>글로수 라반</li><br>
                         <li>THE BEAST.</li><br>
-                        <li>THE BEAST.</li>
+                        <li>짐승 같은 하코넨 남작의 조카</li>
                     </ol>
                     <img src="./imgDune/character6.jpg" alt="캐릭6">
                     <img src="./imgDune/DUNE_POSTER_6.jpg" alt="캐릭6">
