--- a/001.HTML/000.T_Pj/Dune_Pj/index.html
+++ b/001.HTML/000.T_Pj/Dune_Pj/index.html
@@ -42,7 +42,7 @@
         </nav>
         <button class="ham">≡</button>
     </header>
-    <!-- 중간 -->
+    <!-- 메인영역 -->
     <main class="cont">
         <div id="cbx">
             <div class="cat">
