--- a/001.HTML/000.T_Pj/2.Lego_PJ/intro.html
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/intro.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="intro.css">
 </head>
 <body>
-    <video id="video" src="./img/legointro1080.mp4" autoplay muted loop playsinline="./img/intro.png"></video>
+    <video id="video" src="./img/legointro1080-1.mp4" autoplay muted loop playsinline="./img/intro.png"></video>
 
     <h1 id="enter"><a href="./index.html">
         <img src="./img/LEGO_logo.png" alt="레고 로고">
