--- a/001.HTML/000.T_Pj/2.Lego_PJ/index.html
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/index.html
@@ -60,6 +60,11 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
+        <div id="screen2">
+            <iframe id="ifr" src="https://www.youtube.com/embed/?autoplay=1&mute=1&loop=1&playlist=U-zxyUUzzrA&playsinline=1/"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
 
         <nav class="list">
             <ul>
