--- a/001.HTML/000.T_Pj/2.Lego_PJ/index.html
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/index.html
@@ -56,12 +56,14 @@
     <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ메인ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ -->
     <main id="cont" class="part rbx">
         <div id="screen">
-            <iframe id="ifr" src="https://www.youtube.com/embed/?autoplay=1&mute=1&loop=1&playlist=U-zxyUUzzrA&playsinline=1/"
+            <iframe id="ifr"
+                src="https://www.youtube.com/embed/?autoplay=1&mute=1&loop=1&playlist=U-zxyUUzzrA&playsinline=1/"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
         <div id="screen2">
-            <iframe id="ifr" src="https://www.youtube.com/embed/?autoplay=1&mute=1&loop=1&playlist=U-zxyUUzzrA&playsinline=1/"
+            <iframe id="ifr"
+                src="https://www.youtube.com/embed/?autoplay=1&mute=1&loop=1&playlist=U-zxyUUzzrA&playsinline=1/"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
@@ -71,36 +73,40 @@
                 <li>
                     <a href="#" onclick="goMv('2yTr5oS99_c')">
                         <img src="./img/b1.jpg" alt="스타워즈">
-                <ol class="txt">
-                    <li>Star Wars Special</li>
-                    <li>350$</li>
-                </ol>
-                </a></li>
+                        <ol class="txt">
+                            <li>Star Wars Special</li>
+                            <li>350$</li>
+                        </ol>
+                    </a></li>
             </ul>
         </nav>
     </main>
     <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ메인ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ -->
     <footer id="info" class="part">
         <address>
+            <img src="./img/logo.png" alt="하단레고로고">
             <span>
-
+                LEGO System A/S, DK-7190 Billund, Denmark. Must be 18 years or older to purchase online.<br>
+                LEGO, the LEGO logo, the Minifigure, DUPLO, LEGENDS OF CHIMA, NINJAGO, BIONICLE, MINDSTORMS and MIXELS are trademarks
+                and copyrights <br>
+                of the LEGO Group. ©2021 The LEGO Group. All rights reserved. Use of this site signifies your agreement to the terms of use.
             </span>
         </address>
         <ul class="sns">
             <li><a href="#">
-                <span></span>
-        </a>
-    </li>
-    <li><a href="#">
-            <span></span>
-        </a>
-    </li>
-        <li><a href="#">
-            <span></span>
-        </a>
-    </li>
-    </ul>
-</footer>
+                    <span></span>
+                </a>
+            </li>
+            <li><a href="#">
+                    <span></span>
+                </a>
+            </li>
+            <li><a href="#">
+                    <span></span>
+                </a>
+            </li>
+        </ul>
+    </footer>
 
 </body>
 
