--- a/001.HTML/008.VOGUE_PJ/002.site/index.html
+++ b/001.HTML/008.VOGUE_PJ/002.site/index.html
@@ -27,9 +27,9 @@
                     </div>
                 </div>
             </section>
-            <!-- 컨텐츠2 - 파트1:3개 -->
+            <!-- 컨텐츠2 - 파트2:3개 -->
             <section class="pt2 rbx">
-                <div class="rbxIn">
+                <div class="rbxIn fbx">
                     <div class="cbx bgi bg2"></div>
                     <div class="cbx bgi bg3"></div>
                     <div class="cbx bgi bg4"></div>
@@ -44,7 +44,7 @@
                 </div>
             </section>
             <section class="pt2 rbx">
-                <div class="rbxIn">
+                <div class="rbxIn fbx">
                     <div class="cbx bgi bg6"></div>
                     <div class="cbx bgi bg7"></div>
                     <div class="cbx bgi bg8"></div>
@@ -59,14 +59,14 @@
                 </div>
             </section>
             <section class="pt2 rbx">
-                <div class="rbxIn">
+                <div class="rbxIn fbx">
                     <div class="cbx bgi bg10"></div>
                     <div class="cbx bgi bg11"></div>
                     <div class="cbx bgi bg12"></div>
                 </div>
             </section>
             <section class="pt2 rbx">
-                <div class="rbxIn">
+                <div class="rbxIn fbx">
                     <div class="cbx bgi bg13"></div>
                     <div class="cbx bgi bg14"></div>
                     <div class="cbx bgi bg15"></div>
