--- a/001.HTML/000.T_Pj/2.Lego_PJ/index.html
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/index.html
@@ -88,21 +88,29 @@
             <span>
                 LEGO System A/S, DK-7190 Billund, Denmark. Must be 18 years or older to purchase online.<br>
                 LEGO, the LEGO logo, the Minifigure, DUPLO, LEGENDS OF CHIMA, NINJAGO, BIONICLE, MINDSTORMS and MIXELS are trademarks
-                and copyrights <br>
+                and copyrights <!-- <br> -->
                 of the LEGO Group. ©2021 The LEGO Group. All rights reserved. Use of this site signifies your agreement to the terms of use.
             </span>
         </address>
         <ul class="sns">
-            <li><a href="#">
-                    <span></span>
+            <li>
+                <a href="https://www.facebook.com/LEGO/" target="_blank" title="페이스북 바로가기">
+                    <span class="ir">페이스북 바로가기</span>
                 </a>
             </li>
-            <li><a href="#">
-                    <span></span>
+            <li>
+                <a href="https://twitter.com/LEGO_Group" target="_blank" title="트위터 바로가기">
+                    <span class="ir">트위터 바로가기</span>
                 </a>
             </li>
-            <li><a href="#">
-                    <span></span>
+            <li>
+                <a href="https://www.instagram.com/lego/" target="_blank" title="인스타그램 바로가기">
+                    <span class="ir">인스타그램 바로가기</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/user/LEGO?app=desktop" target="_blank" title="유튜브 바로가기">
+                    <span class="ir">유튜브 바로가기</span>
                 </a>
             </li>
         </ul>
